--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
@@ -34,16 +34,42 @@
                 <a class="navbar-brand" href="index.html"></a>
             </div>
             <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <li id="user-info" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" id="nickname"><i class="fa fa-user"></i><b class="caret"></b></a>
+             <ul class="nav navbar-right top-nav">
+             	{{#anonymous}}
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li> <a><i class="fa fa-fw fa-user"></i> Profile</a> </li>
-                        <li> <a><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
                         <li class="divider"></li>
-                        <li> <a id="btn-logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
                     </ul>
                 </li>
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+                {{/anonymous}}
+                {{^anonymous}}
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            
+                        </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
+                    </ul>
+                </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -74,8 +100,8 @@
                     <legend>Resumen de la cuenta</legend>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 text-center"> <img class="img-responsive avatar-sombra" src="{{usuario.avatarUrl}}">
-                        <h2 class="">{{usuario.nombre}}</h2>
+                    <div class="col-md-3 text-center"> <img class="img-responsive avatar-sombra" src="/">
+                        <h2 class="">{{usuario.username}}</h2>
                         <p><i class="fa fa-envelope-o" aria-hidden="true"></i>{{usuario.email}}</p>
                     </div>
                     <div class="col-md-9">
@@ -95,7 +121,7 @@
                                     {{#usuariosSeguidos}}
                                     <div class="media">
                                         <div class="media-left">
-                                            <a href="#"><img class="media-object avatar" src="{{avatarUrl}}" alt="{{nombre}} avatar"></a>
+                                            <a href="#"><img class="media-object avatar" src="/" alt="{{nombre}} avatar"></a>
                                         </div>
                                         <div class="media-body">
                                             <h4 class="media-heading">{{nombre}}</h4>
@@ -239,9 +265,9 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="../static/js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
