--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
@@ -34,19 +34,42 @@
                 <a class="navbar-brand" href="index.html"></a>
                 </div>
             <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-
-
-                <li id="user-info" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" id="nickname"><i class="fa fa-user"></i><b class="caret"></b></a>
+             <ul class="nav navbar-right top-nav">
+             	{{#anonymous}}
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li> <a><i class="fa fa-fw fa-user"></i> Profile</a> </li>
-                        <li> <a><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
                         <li class="divider"></li>
-                        <li> <a id="btn-logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
                     </ul>
                 </li>
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+                {{/anonymous}}
+                {{^anonymous}}
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
 
+                        <li class="divider"></li>
+                        <li>
+                            
+                        </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
+                    </ul>
+                </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
