--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -30,6 +30,7 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
+             	{{#anonymous}}
 	           	<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -43,19 +44,27 @@
                         </li>
                     </ul>
                 </li>
+                {{/anonymous}}
+                {{^anonymous}}
            	     <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
 
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            
                         </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
                     </ul>
                 </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
