--- a/CuantoMeme/src/app/templates/perfil.template.html
+++ b/CuantoMeme/src/app/templates/perfil.template.html
@@ -62,11 +62,11 @@
                     <form>
                         <div class="form-group">
                             <label for="usernameinput">Cambiar nombre de usuario</label>
-                            <input [(ngModel)]="usernameModified" type="text" class="form-control" id="usernameinput" placeholder="Nombre de usuario">
+                            <input [(ngModel)]="usernameModified" type="text" class="form-control" id="usernameinput" placeholder="Nombre de usuario" name="username">
                         </div>
                         <div class="form-group">
                             <label for="emailinput">Cambiar email</label>
-                            <input [(ngModel)]="emailModified" type="text" class="form-control" id="emailinput" placeholder="email">
+                            <input [(ngModel)]="emailModified" type="text" class="form-control" id="emailinput" placeholder="email" name="email">
                         </div>
                         <button class="btn btn-info" type="button" (click)="cambiarUsuario">¡Enviar!</button>
                     </form>
